--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a><br>
 <br><p><a href="https://github.com/tjvrql262/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/16/n11945471.md#1">【网海拾贝】此时此刻需要的是良心和良知</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/16/n11945327.md#1">谢燕益：良心艺术家追魂案情况通报</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/16/n11944942.md#1">王赫：中共对美政策的险恶和习的抉择</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/16/n11945049.md#1">杨宁：武汉合唱团两死多人感染 红歌是催命符</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/16/n11943684.md#1">无弦：高墙内外的呐喊</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/15/n11942655.md#1">毛泽东73岁生日自杀的周小舟</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/16/n11943601.md#1">项云：毒源甩锅国外的流氓做法是中共惯用手段</a><br>
-<a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/15/n11942848.md#1">【名家专栏】从新冠病毒爆发看全球劳动分工</a><br>
 <br><p><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/3/n11912239.md#1">【一线采访】疫情严峻 上海企业复工艰辛</a><br>
 <a href="https://github.com/tjvrql262/djy/blob/master/gb/20/3/2/n11909414.md#1">陆媒三炮齐发 揭中共卫健委隐瞒疫情</a><br>
