--- a/gb/10/4/19/n2881569.md
+++ b/gb/10/4/19/n2881569.md
@@ -243,8 +243,8 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/9/n9823637.md#1" target="_blank">苦胆：“十月革命一声炮响”放的是空炮</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/7/n10767290.md#1" target="_blank">美18位参议员联合发声 谴责中共打压宗教</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
