--- a/gb/10/11/7/n3077476.md
+++ b/gb/10/11/7/n3077476.md
@@ -599,8 +599,9 @@ Abyss——无底地狱。佛教中亦有阿鼻地狱（Abichi Hell）之说。<
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/13/n10781989.md#1" target="_blank">林辉：北京反驳彭斯 需要补历史课的是谁？</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/1/n10353433.md#1">玉清心：从赠马克思巨型雕像看中共海外渗透</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/21/n10161210.md#1">周晓辉：马克思口中“污秽之书”中共再宣扬</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899641.md#1" target="_blank">抗日战争期间中共做了啥？八年抗战期间中共作为大事纪要</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
