--- a/gb/18/3/21/n10237682.md
+++ b/gb/18/3/21/n10237682.md
@@ -104,7 +104,7 @@
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/4/n10114567.md#1">华府研讨会 聚焦《共产主义终极目的》与退党</a></li>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/3/19/n10229002.md#1">香港盛大集会游行 庆祝近三亿人退出中共</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931386.md#1" target="_blank">生的希望</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
